[gd_scene load_steps=45 format=3 uid="uid://dhjxpdfrc4irr"]

[ext_resource type="Script" uid="uid://bvriyi3eswayc" path="res://Scenes/Player/player.gd" id="1_a3d8c"]
[ext_resource type="Texture2D" uid="uid://dvlue2n4i3qa7" path="res://Ninja Adventure - Asset Pack/Actor/Characters/Flam/SeparateAnim/Walk.png" id="2_a3d8c"]
[ext_resource type="Texture2D" uid="uid://dd47y7ama6fmw" path="res://Ninja Adventure - Asset Pack/Actor/Characters/Flam/SeparateAnim/Attack.png" id="2_dd0ac"]
[ext_resource type="Texture2D" uid="uid://wgjgnwn5w8k1" path="res://Ninja Adventure - Asset Pack/Ui/LifeReceptacle/heart.png" id="3_mtuoh"]
[ext_resource type="Texture2D" uid="uid://dh6xstgykw0ty" path="res://Ninja Adventure - Asset Pack/Items/Scroll/ScrollEmpty.png" id="3_xpcdj"]
[ext_resource type="Texture2D" uid="uid://dhwvas7vgjmtn" path="res://Ninja Adventure - Asset Pack/Items/Weapons/Hammer/Sprite.png" id="5_htcer"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jincj"]
atlas = ExtResource("2_dd0ac")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqdc0"]
atlas = ExtResource("2_dd0ac")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qr1w5"]
atlas = ExtResource("2_dd0ac")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ythyg"]
atlas = ExtResource("2_dd0ac")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3d8c"]
atlas = ExtResource("2_a3d8c")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_74mp2"]
atlas = ExtResource("2_a3d8c")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oikmp"]
atlas = ExtResource("2_a3d8c")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_06tpx"]
atlas = ExtResource("2_a3d8c")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xpcdj"]
atlas = ExtResource("2_a3d8c")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtuoh"]
atlas = ExtResource("2_a3d8c")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_htcer"]
atlas = ExtResource("2_a3d8c")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dd0ac"]
atlas = ExtResource("2_a3d8c")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0u5uq"]
atlas = ExtResource("2_a3d8c")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jlvik"]
atlas = ExtResource("2_a3d8c")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gk6dx"]
atlas = ExtResource("2_a3d8c")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhyir"]
atlas = ExtResource("2_a3d8c")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7g0yx"]
atlas = ExtResource("2_a3d8c")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dey5f"]
atlas = ExtResource("2_a3d8c")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5xpd"]
atlas = ExtResource("2_a3d8c")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ks1b7"]
atlas = ExtResource("2_a3d8c")
region = Rect2(16, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_74mp2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jincj")
}],
"loop": true,
"name": &"attack_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqdc0")
}],
"loop": true,
"name": &"attack_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qr1w5")
}],
"loop": true,
"name": &"attack_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ythyg")
}],
"loop": true,
"name": &"attack_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3d8c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74mp2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oikmp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06tpx")
}],
"loop": true,
"name": &"move_down",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xpcdj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtuoh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htcer")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dd0ac")
}],
"loop": true,
"name": &"move_left",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0u5uq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jlvik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gk6dx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhyir")
}],
"loop": true,
"name": &"move_right",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7g0yx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dey5f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5xpd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ks1b7")
}],
"loop": true,
"name": &"move_up",
"speed": 6.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_a3d8c"]
radius = 5.0
height = 12.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a3d8c"]
size = Vector2(8, 8)

[sub_resource type="CircleShape2D" id="CircleShape2D_xpcdj"]
radius = 3.0

[sub_resource type="AtlasTexture" id="AtlasTexture_hnuln"]
atlas = ExtResource("3_mtuoh")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqm4k"]
atlas = ExtResource("3_mtuoh")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcvs5"]
atlas = ExtResource("3_mtuoh")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8ma5"]
atlas = ExtResource("3_mtuoh")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_eksi1"]
atlas = ExtResource("3_mtuoh")
region = Rect2(64, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_jincj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnuln")
}],
"loop": true,
"name": &"0_hp",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqm4k")
}],
"loop": true,
"name": &"1_hp",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcvs5")
}],
"loop": true,
"name": &"2_hp",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8ma5")
}],
"loop": true,
"name": &"3_hp",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eksi1")
}],
"loop": true,
"name": &"4_hp",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_mtuoh"]
font_size = 32

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dd0ac"]
size = Vector2(8, 19)

[sub_resource type="Animation" id="Animation_dd0ac"]
resource_name = "attack_up"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.48353, 1.309]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-6, -7)]
}

[sub_resource type="Animation" id="Animation_0u5uq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-3, -9)]
}

[sub_resource type="Animation" id="Animation_jlvik"]
resource_name = "attack_right"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(7, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.479966, 1.68075]
}

[sub_resource type="Animation" id="Animation_gk6dx"]
resource_name = "attack_down"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-4, 7)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-2.12407, -4.36507]
}

[sub_resource type="Animation" id="Animation_jhyir"]
resource_name = "attack_left"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-9, 3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.326377, -2.56738]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jlvik"]
_data = {
&"RESET": SubResource("Animation_0u5uq"),
&"attack_down": SubResource("Animation_gk6dx"),
&"attack_left": SubResource("Animation_jhyir"),
&"attack_right": SubResource("Animation_jlvik"),
&"attack_up": SubResource("Animation_dd0ac")
}

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 7
motion_mode = 1
script = ExtResource("1_a3d8c")
push_strength = 200.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_74mp2")
animation = &"attack_left"
autoplay = "move_down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_a3d8c")

[node name="InteractArea2D" type="Area2D" parent="."]
visible = false
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea2D"]
shape = SubResource("RectangleShape2D_a3d8c")
debug_color = Color(8.66354e-07, 0.634097, 0.432968, 0.42)

[node name="HitboxArea2D" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxArea2D"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_xpcdj")
debug_color = Color(0.968627, 0, 0.027451, 0.419608)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HPBar" type="AnimatedSprite2D" parent="CanvasLayer"]
unique_name_in_owner = true
position = Vector2(43, 33)
scale = Vector2(2.3125, 2.3125)
sprite_frames = SubResource("SpriteFrames_jincj")
animation = &"0_hp"
autoplay = "4_hp"

[node name="Panel" type="Panel" parent="CanvasLayer"]
offset_left = 76.0
offset_top = 11.0
offset_right = 180.0
offset_bottom = 59.0

[node name="TreasureLabel" type="Label" parent="CanvasLayer/Panel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 47.0
offset_right = 102.0
offset_bottom = 48.0
text = "0"
label_settings = SubResource("LabelSettings_mtuoh")
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 7.0
offset_top = 4.0
offset_right = 46.0
offset_bottom = 43.0
texture = ExtResource("3_xpcdj")

[node name="AttackDurationTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="Weapon" type="Sprite2D" parent="."]
visible = false
position = Vector2(-3, -9)
texture = ExtResource("5_htcer")
offset = Vector2(0, -5)

[node name="WeaponArea2D" type="Area2D" parent="Weapon"]
collision_layer = 2
collision_mask = 16
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Weapon/WeaponArea2D"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_dd0ac")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_jlvik")
}

[connection signal="body_entered" from="InteractArea2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="InteractArea2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="HitboxArea2D" to="." method="_on_hitbox_area_2d_body_entered"]
[connection signal="timeout" from="AttackDurationTimer" to="." method="_on_attack_duration_timer_timeout"]
[connection signal="body_entered" from="Weapon/WeaponArea2D" to="." method="_on_weapon_area_2d_body_entered"]
